# duplicate_file_deleter

./: CMakeLists.txt  duplicate_file_deleter.cpp  main_window.cpp  main_window.h  progress_dialog.cpp  progress_dialog.h  scanner.h
resources/: resources.qrc
resources/ui/: main_window.ui  progress_dialog.ui
